# persional_cheif

./: .gitignore  AI私厨功能说明.md  Plan.md  README.md  package.json  pyproject.toml  数据库表结构.md
app/: main.py
app/agents/: personal_chief.py
app/api/v1/: chat.py  favorites.py  shopping.py
app/db/: database.py  operations.py
app/models/: schemas.py
app/static/: chat.html  index.html
app/static/css/: style.css
app/static/js/: api.js  chat.js  favorites.js  init.js  shopping-list.js
私厨-前端源码/: .env.local.example
私厨-前端源码/.next/: BUILD_ID(1)  build-manifest(1).json  export-detail.json  fallback-build-manifest(1).json  prerender-manifest(1).json  required-server-files(1).js  required-server-files.json  trace(1)  trace-build(1)
私厨-前端源码/.next/cache/: (1).previewinfo  (1).rscinfo  .tsbuildinfo
私厨-前端源码/.next/dev/: prerender-manifest.json  trace(1)
私厨-前端源码/.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
私厨-前端源码/.next/dev/server/: server-reference-manifest(1).js  server-reference-manifest.json
私厨-前端源码/.next/dev/server/app/: page_client-reference-manifest(1).js
私厨-前端源码/.next/dev/static/chunks/: [root-of-the-server]__28bc9c2a._.css  [root-of-the-server]__28bc9c2a._.css.map  _16c64937._(1).js  _16c64937._.js(1).map  _45cf2173._(1).js  _45cf2173._.js(1).map  _65f0a9d9._.js  _65f0a9d9._.js.map  _b55cf3c2._.js  (+28 more)
私厨-前端源码/.next/server/: middleware-build-manifest.js  server-reference-manifest(1).js  server-reference-manifest(1).json
私厨-前端源码/.next/server/app/: _global-error(1).html  _global-error(1).rsc  page.js.nft.json  page_client-reference-manifest(1).js
(+241 files in other folders)
