[project]
name = "langchain1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "alibabacloud-oss-v2>=1.3.0",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.17",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-tools>=0.1.34",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.24",
    "notebook>=7.5.6",
    "openai>=2.33.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "tool>=0.8.0",
]
